fixed overlap

--- a/textures/style.css
+++ b/textures/style.css
@@ -1,5 +1,6 @@
 #container{
 				position: relative;
+				height:100%;
 			}
 
 			#sticky {
@@ -68,8 +69,8 @@
 
 				
 
-			.parallax-container {
-		      	height: "your height here";
+			.parallax-container1 {
+		      	height: 700px;
 		    }
 
 		    #bigLogo{
